feature api: create worklog
